--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <title>HTML</title>
   
-  <link rel="stylesheet" href="../CSS/style.css">
+  <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
   
     <div>
      <img 
-     src="../images/Comfy.jpeg" 
+     src="/images/Comfy.jpeg" 
       alt="Comfy smiling"
      class="avatar">
     </div>  
